Ya se pueden eliminar productos

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -108,8 +108,7 @@ footer div {
   align-items: center;
   background-color: orangered;
 
-  border-top-right-radius: 20px;
-  border-top-left-radius: 20px;
+  border-radius: 20px;
 }
 
 .toolbar-right {
