--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,5 +1,10 @@
 :root {
   --color-header: gray;
+  --color-header-dark: rgb(26, 1, 42);
+  --color-footer-dark: rgb(29, 1, 48);
+
+  --color-content-dark: rgb(52, 52, 56);
+  --color-content-light: white;
 }
 
 html {
@@ -21,7 +26,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: #e2e2e2;
+  background-color: #c7c5c5;
   display: flex;
   flex-flow: column;
 }
@@ -33,8 +38,21 @@ header {
   align-items: center;
 }
 
+header.dark {
+  background-color: rgb(32, 32, 36);
+  color: white;
+}
+
 main {
   flex-grow: 1;
+
+  display: flex;
+  flex-direction: column;
+}
+
+main.dark {
+  background-color: rgb(32, 32, 36);
+  color: white;
 }
 
 footer {
@@ -44,10 +62,79 @@ footer {
   flex-flow: column wrap;
   justify-content: center;
   align-items: center;
+  box-shadow: 5px 5px 20px black;
+}
+
+footer.dark {
+  background-color: var(--color-footer-dark);
+  color: white;
+}
+
+footer i {
+  color: black;
+}
+
+footer i:hover {
+  color: gray;
+}
+
+footer.dark i {
+  color: white;
+}
+
+footer.dark i:hover {
+  color: rgb(180, 145, 80);
 }
 
 footer div {
   margin: 10px;
+}
+
+.contact-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: space-between;
+}
+.contact-icons a {
+  margin: 0px 10px 0px 10px;
+  text-decoration: none;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  transition: transform 0.3s;
+}
+
+.contact-icons a:hover {
+  color: rgb(148, 119, 64);
+  transform: scale(1.1);
+}
+
+.contact {
+  margin: 0;
+}
+
+.content {
+  flex: 1;
+  padding: 20px;
+  margin: 0px 10px 0px 10px;
+  border-bottom-left-radius: 40px;
+  border-bottom-right-radius: 40px;
+  border-left: solid black;
+  border-right: solid black;
+  border-bottom: solid black;
+  background-color: var(--color-content-light);
+}
+
+.content.dark {
+  background-color: var(--color-content-dark);
+}
+.sub-content {
+  height: 100%;
+  background-color: transparent;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .content-title {
@@ -57,13 +144,16 @@ footer div {
   font-family: Poppins, sans-serif;
   font-style: italic;
 
-  border-bottom-right-radius: 30px;
-  border-bottom-left-radius: 30px;
   box-shadow: 5px 5px 20px black;
 
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.content-title.dark {
+  background-color: var(--color-header-dark);
+  color: white;
 }
 
 .content-title img {
@@ -96,6 +186,11 @@ footer div {
   margin-bottom: 10px;
   box-shadow: 5px 5px 20px black;
   border-radius: 20px;
+}
+
+.category-content i {
+  cursor: pointer;
+  color: dark;
 }
 
 .etiqueta-category {
@@ -150,10 +245,10 @@ footer div {
 
 .total-content {
   position: sticky;
-  bottom: 0px;
+  bottom: 5px;
   width: 100%;
-  margin-bottom: 20px;
-  padding: 10px;
+
+  padding: 10px 10px 20px 20px;
   display: flex;
   justify-content: center;
   font-family: Poppins, sans-serif;
@@ -174,4 +269,9 @@ footer div {
 
   box-shadow: 5px 5px 20px black;
   border-radius: 50px;
+}
+
+.total-sub-content.dark {
+  background-color: rgb(49, 49, 53);
+  color: white;
 }
