Conexión a base de datos realizada

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,5 +1,5 @@
 :root {
-  --color-header: gray;
+  --color-header: #98ace0ff;
   --color-header-dark: rgb(26, 1, 42);
   --color-footer-dark: rgb(29, 1, 48);
 
