--- a/src/css/modo-lista.css
+++ b/src/css/modo-lista.css
@@ -38,7 +38,16 @@
   word-wrap: break-word;
   row-gap: 10px;
   border-bottom: solid black;
-  border-width: 1px;
+  border-width: 2px;
+  padding: 10px;
+
+  justify-content: center;
+  align-items: center;
+}
+
+.producto-list.dark {
+  border-bottom: solid white;
+  border-width: 2px;
 }
 
 .nombre-producto-lista,
@@ -60,6 +69,8 @@
 }
 
 .total-list-content {
+  font-size: 20px;
+  margin: 10px;
   display: flex;
   justify-content: flex-end;
 }
