--- a/src/css/popup-add-product.css
+++ b/src/css/popup-add-product.css
@@ -35,7 +35,22 @@ select {
 }
 .cuantificador {
   display: flex;
+  align-items: baseline;
   gap: 20px;
+}
+
+.precio {
+  display: flex;
+  align-items: baseline;
+  gap: 20px;
+}
+
+.input-new-cantidad {
+  width: 100px;
+}
+
+.input-new-precio {
+  width: 200px;
 }
 
 .input-new-nota {
