--- a/src/css/guide-styles.css
+++ b/src/css/guide-styles.css
@@ -1,5 +1,7 @@
 .guide {
+  max-width: 1200px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   text-align: center;
   font-family: Poppins;
