--- a/src/css/stadistics-styles.css
+++ b/src/css/stadistics-styles.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
+  max-width: 1200px;
+  width: 100%;
 }
 
 .total-inventary {
@@ -20,6 +22,7 @@
   text-align: center;
   font-family: Poppins;
   font-size: 1.5rem;
+  font-weight: 600;
   background-color: gray;
   margin: 20px;
   padding: 20px;
@@ -41,6 +44,8 @@
 
   font-family: Poppins;
   font-size: 1.5rem;
+  font-weight: 600;
+
   background-color: gray;
   margin: 20px;
   padding: 20px;
@@ -76,10 +81,87 @@
   font-size: 1.5rem;
 }
 
+.general-graphic {
+  height: 200px;
+  padding: 10px;
+  border-radius: 20px;
+  background-color: #414372ff;
+  box-shadow: 2px 2px 5px black;
+}
+
 .data-table {
   margin: 50px;
+  width: 100%;
 }
 
 .title-table {
   font-size: 1.5rem;
+  width: 100%;
+  text-align: center;
+  padding: 20px;
+}
+
+.conjunto-row-graphic {
+  display: flex;
+  align-items: stretch;
+  margin: 50px;
+  border-radius: 20px;
+  background-color: rgb(91, 114, 173);
+  box-shadow: 2px 2px 5px black;
+  color: inherit;
+}
+
+.row-table {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  justify-content: center;
+}
+
+.row-name {
+  font-size: 1.5rem;
+  padding: 20px;
+  background-color: #141a28;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  opacity: 0.9;
+}
+
+.category-data {
+  padding: 20px;
+  flex-grow: 1;
+}
+
+.graphic {
+  background-color: #b7ceff;
+  width: 50%;
+  border-radius: 20px;
+  padding: 20px;
+}
+
+.category-name {
+  padding: 10px;
+  font-size: 1.25rem;
+  background-color: #2a3654;
+  border-radius: 15px;
+}
+
+.products-on-category {
+  padding: 10px;
+}
+
+.price-of-category {
+  padding: 10px;
+}
+
+.void-folders {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 20px;
+  padding: 20px;
+  border: solid gray;
+  border-radius: 20px;
 }
