--- a/src/css/App.css
+++ b/src/css/App.css
@@ -53,6 +53,15 @@ body {
   background-color: rgb(53, 68, 105);
 }
 
+.importante {
+  margin-top: 100px;
+  padding: 30px;
+}
+
+.importante b {
+  color: #fff;
+}
+
 .main {
   flex-grow: 1;
   display: flex;
